# Deep-Learning

C/Main Learner/: Binance Trading DIFF.py  Binance Trading.py  DeepLearner.py  Testing CHESSBOARD.py  Testing COV.py  Testing COVDIFF.py  Testing COVDIFFPROP.py  Testing.py  Training.py  activation.c  activation.h  deeplearner.c  deeplearner.h  interface.c  interfaceC.c
CUDA/Main Learner/: DeepLearner.py  (+7 more)
Main Learner/: Binance Trading ABSOLUTE Production.py  Binance Trading DIFF.py  Binance Trading RATIO Production.py  Binance Trading RATIO Twitter.py  Binance Trading RATIO.py  COVJAB1results.txt  DeepLearner.py  LONGCOV1results.txt  LONGCOV250results.txt  LONGCOV2results.txt  LONGCOV4results.txt  Testing Binary Output.py  Testing CHESSBOARD.py  Testing COVDIFF.py  Testing COVDIFFPROP.py  Testing COVDIFFPROPMIX.py  Testing COVRATIO.py  Testing LONGCOV.py  Testing.py  Training Batch.py  Training.py  YEASTGROWTH1results.txt  YEASTGROWTHLOW2200results.txt  YEASTGROWTHLOW3200results.txt  YEASTGROWTHLOW4200results.txt  deepCUDA.exp  deepCUDA.lib  interface.c  interface.cu  interface.cuh  interface.h  interfaceNEW.c  interfaceNEW.h
packaging/: LICENSE.lic  pyproject.toml
packaging/src/DeepLearningOptimized/: Data_DL.py  Model_DL.py  Testing.py  Training Batch.py  Training.py  __init__.py  interface.c  interface.cu  interface.cuh  interface.h
packaging/src/DeepLearningOptimized/DATA/: YEASTGROWTHLOWTEST.txt  YEASTGROWTHLOWTRAIN.txt  YEASTGROWTHLOWVALIDATE.txt
packaging/src/DeepLearningOptimized/YEASTTEST1/: config.txt  hidden0.txt  hidden1.txt  hidden2.txt  hidden3.txt
(+1331 files in other folders)
